--- a/app/Views/games.html
+++ b/app/Views/games.html
@@ -1,5 +1,20 @@
 <div class="jumbotron text-center">
     <h1>Games</h1>
+
+    <div class="btn-group" role="group">
+        <button type="button" class="btn btn-primary" ng-click="myFilter={state:''}">All</button>
+    </div>
+    <div class="btn-group" role="group">
+        <button type="button" class="btn btn-primary" ng-click="myFilter={state:'open'}">Open</button>
+    </div>
+    <div class="btn-group" role="group">
+        <button type="button" class="btn btn-primary" ng-click="myFilter={state:'playing'}">Playing</button>
+    </div>
+    <div class="btn-group" role="group">
+        <button type="button" class="btn btn-primary" ng-click="myFilter={state:'finished'}">Finished</button>
+    </div>
+
+
     <table class="table table-striped">
         <thead>
         <tr>
@@ -12,7 +27,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="game in gc.GameFactory.games">
+        <tr ng-repeat="game in gc.GameFactory.games | filter: myFilter">
             <td>{{ game.id }}</td>
             <td>{{ game.minPlayers }}</td>
             <td>{{ game.maxPlayers }}</td>
