--- a/app/Views/board.html
+++ b/app/Views/board.html
@@ -1,10 +1,14 @@
 <div class="jumbotron text-center">
-    <div>
+    <div style="position:absolute; left:10px; top:200px;">
 		<div
+			style="position:absolute;"
 			ng-repeat="tileobject in gc.GameFactory.tiles"
+			ng-if="tileobject.match.foundBy == undefined"
 			class="sprite sprite-{{tileobject.tile.suit + tileobject.tile.name | lowercase}}"
 			z-index="{{ tileobject.zPos }}"
+			ng-style="{'left': tileobject.left, 'top': tileobject.top}"
 		>
 		</div>
+		<!--ng-style="{'left': tileobject.tile.xPos * 70 + 'px';}"-->
 	</div>
 </div>
