--- a/app/Views/gameDetails.html
+++ b/app/Views/gameDetails.html
@@ -2,6 +2,7 @@
     <h1>Players in Game</h1>
     <table class="table table-striped">
         <tbody>
+        <tr ng-repeat="player in gc.selectedGame.players">
             <td>{{ player._id }}</td>
             <td>{{ player.name }}</td>
         </tr>
