--- a/app/Views/games.html
+++ b/app/Views/games.html
@@ -40,7 +40,7 @@
             <td><a ui-sref="gamePlayers" href ng-click="gc.setSelected(game)"> {{ game.players.length }}</a></td>
             <td>{{ game.state }}</td>
             <td>
-                <button ng-if="gc.canJoin(game)" ng-click="gc.joinGame(game)">Join</button>
+                <button ng-if="gc.canJoin(game)" ng-click="gc.canJoinGame(game)">Join</button>
                 <button ui-sref="game"  ng-if="game.state != 'open'" ng-click="gc.getGameDetails(game)">Play</button>
             </td>
         </tr>
