Fixes, Cleanup, Style

--- a/app/Views/board.html
+++ b/app/Views/board.html
@@ -1,5 +1,9 @@
-<div class="jumbotron text-center">
-    <div style="position:absolute; left:10px; top:100px;">
+<div class="text-center">
+    <div style="
+				position: absolute;
+				left: 400px;
+				top: 170px;"
+	>
 		<div
 			style="position:absolute;"
 			ng-repeat="tileobject in gc.GameFactory.tiles"
