--- a/app/Views/game.html
+++ b/app/Views/game.html
@@ -1,4 +1,4 @@
-<div class="jumbotron text-center">
+<div class="text-center">
 	<nav class="navbar navbar-inverse" role="navigation">
 		<ul class="nav navbar-nav">
 			<li><a ui-sref=".board">Board</a></li>
