--- a/app/Views/createGame.html
+++ b/app/Views/createGame.html
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
     <h1 style="padding-bottom: 20px;">Create Game</h1>
-    <table>
+    <table style="margin-left: 160px;">
         <tr>
             <th>Template:</th>
             <th>Maxplayers:</th>
