--- a/app/css/config.scss
+++ b/app/css/config.scss
@@ -1,2 +1,10 @@
 $background-color: #3f4cff;
 $header-color: #ff0900;
+$font-size: 20px;
+
+// Color themes
+$themes: (
+        default: #000000,
+        banana: #f1c40f,
+        grandpa: #c0392b,
+);
