--- a/app/css/theme.scss
+++ b/app/css/theme.scss
@@ -16,8 +16,22 @@
       @if $name == "banana" {
         background-image: url("http://www.themesltd.com/headers2/banana_on_the_run.png");
         background-size: cover;
+
+      }
+    }
+
+    .navbar-inverse .navbar-nav>li>a {
+      @if $name == "banana" {
+        color: #000;
+        font-size: 18px;
+        font-weight: bold;
       }@else if $name == "grandpa" {
         font-size: $font-size * 3;
+      }
+
+      &:hover {
+        background: darken($color, 10%);
+        color: rgb(255, 253, 248);
       }
     }
 
