--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -19,6 +19,16 @@
   float: right;
 }
 
+.navbar-inverse .navbar-nav>li>a {
+  color: #262626;
+}
+
+.navbar-inverse .navbar-brand {
+  color: #262626;
+  font-weight: bold;
+}
+
+
 
 body {
   padding: 1em;
