--- a/app/css/config.scss
+++ b/app/css/config.scss
@@ -2,7 +2,7 @@ $font-size: 20px;
 
 // Color themes
 $themes: (
-        default: #000000,
+        default: #F0AD4E,
         banana: #f1c40f,
-        grandpa: #c0392b,
+        grandpa: #82a7c0,
 );
