--- a/app/Game/Views/board.html
+++ b/app/Game/Views/board.html
@@ -6,7 +6,7 @@
 	>
 		<div
 			style="position:absolute;"
-			ng-repeat="tileobject in gc.GameFactory.tiles"
+			ng-repeat="tileobject in gdCtrl.tiles"
 			ng-if="tileobject.match.foundBy == undefined"
 			class="sprite sprite-{{tileobject.tile.suit + tileobject.tile.name | lowercase}}"
 			z-index="{{ tileobject.zPos }}"
