--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -1,5 +1,7 @@
 @import 'config';
 @import 'theme';
+@import 'sprites';
+
 
 // Including themes
 // By looping through the $themes map
@@ -17,6 +19,11 @@
   margin-bottom: .5em;
   margin-left: 3px;
   float: right;
+}
+
+.navbar-inverse {
+  background-color: #F0AD4E;
+  border-color: #080808;
 }
 
 .navbar-inverse .navbar-nav>li>a {
