--- a/app/css/sprites_old.css
+++ b/app/css/sprites_old.css
@@ -1,8 +1,8 @@
-
+/*
 .sprite {
 	width:70px;
 	height:90px;
-	background: url(https://bb.avans.nl/bbcswebdav/pid-6145658-dt-content-rid-16474683_2/courses/AII-1516D-INWEBS6/AII-1516D-INWEBS6_ImportedContent_20160412023118/Mahjong_sprite_sheet_2.png);
+	background: url(defaultSprites.png);
 }
 
 .sprite-character1  { background-position: 0 0; }
@@ -52,4 +52,4 @@
 .sprite-flowerchrysantememum  { background-position: 146px -180px; }
 .sprite-flowerorchid  { background-position: 219px -180px; }
 .sprite-flowerplum  { background-position: 292px -180px; }
-.sprite-flowerbamboo  { background-position: 365px -180px; }
+.sprite-flowerbamboo  { background-position: 365px -180px; }*/
