--- a/app/css/sprites.scss
+++ b/app/css/sprites.scss
@@ -2,7 +2,7 @@
 .sprite {
   width:70px;
   height:90px;
-  background: url(https://bb.avans.nl/bbcswebdav/pid-6145658-dt-content-rid-16474683_2/courses/AII-1516D-INWEBS6/AII-1516D-INWEBS6_ImportedContent_20160412023118/Mahjong_sprite_sheet_2.png);
+  background: url(defaultSprites.png);
 }
 
 .sprite-character1  { background-position: 0 0; }
