--- a/app/Game/Views/board.html
+++ b/app/Game/Views/board.html
@@ -1,7 +1,7 @@
 <div class="text-center">
     <div style="
 				position: absolute;
-				left: 400px;
+				left: 20%;
 				top: 170px;"
 		z-index="-1"
 	>
