--- a/app/Game/Views/board.html
+++ b/app/Game/Views/board.html
@@ -16,7 +16,9 @@
 		</div>
 	</div>
 
-	<div style="width:300px;text-align:center; font-size:20px;background-color:lightgray;position:absolute;margin:0 auto;top:150px;">
+	<div
+		ng-if="gdCtrl.game.state == 'finished'"
+		style="width:300px;text-align:center; font-size:20px;background-color:lightgray;position:absolute;margin:0 auto;top:150px;">
 		No more matches possible!
 	</div>
 </div>
