--- a/app/css/epicDinosaurSprites.css
+++ b/app/css/epicDinosaurSprites.css
@@ -5,6 +5,16 @@
 	background: url(dinosaurSprites.png);
 }
 
+.switch-button {
+	position:absolute;
+	right:23px;
+	background: url(dinoMeteor.jpg);
+	background-size: 100% 100%;
+	width:200px;
+	height:200px;
+	cursor:pointer;
+}
+
 .sprite-character1  { background-position: 0 0; }
 .sprite-character2  { background-position: 73px 0; }
 .sprite-character3  { background-position: 146px 0; }
