--- a/app/Game/Views/board.html
+++ b/app/Game/Views/board.html
@@ -1,30 +1,35 @@
 <div class="text-center">
-	<div class="alert alert-success" ng-if="gdCtrl.succesMessage != ''">
-		{{ gdCtrl.succesMessage }}
-	</div>
-	<div class="alert alert-danger" ng-if="gdCtrl.errorMessage != ''">
-		{{ gdCtrl.errorMessage }}
-	</div>
-    <div style="
-				position: absolute;
-				left: 20%;
-				top: 170px;"
-		z-index="-1"
-	>
+	<div class="pull-left">
+		<link rel="stylesheet" ng-href="{{gdCtrl.chosenTemplate == 'Dinosaurs' ? './css/epicDinosaurSprites.css' : './css/sprites_old.css'}}">
+		<div class="alert alert-success" ng-if="gdCtrl.succesMessage != ''">
+			{{ gdCtrl.succesMessage }}
+		</div>
+		<div class="alert alert-danger" ng-if="gdCtrl.errorMessage != ''">
+			{{ gdCtrl.errorMessage }}
+		</div>
+		<div style="
+					position: absolute;
+					left: 20%;
+					top: 170px;"
+			z-index="-1"
+		>
+			<div
+				style="position:absolute;"
+				ng-repeat="tileObject in gdCtrl.tiles"
+				ng-if="tileObject.match.foundBy == undefined"
+				class="sprite sprite-{{tileObject.tile.suit + tileObject.tile.name | lowercase}}"
+				ng-class="gdCtrl.isSelected(tileObject._id)"
+				ng-style="{'left': tileObject.left, 'top': tileObject.top, 'z-index': tileObject.zPos}"
+				ng-click="gdCtrl.selectTile(tileObject)">
+			</div>
+		</div>
+
 		<div
-			style="position:absolute;"
-			ng-repeat="tileObject in gdCtrl.tiles"
-			ng-if="tileObject.match.foundBy == undefined"
-			class="sprite sprite-{{tileObject.tile.suit + tileObject.tile.name | lowercase}}"
-			ng-class="gdCtrl.isSelected(tileObject._id)"
-			ng-style="{'left': tileObject.left, 'top': tileObject.top, 'z-index': tileObject.zPos}"
-			ng-click="gdCtrl.selectTile(tileObject)">
+			ng-if="gdCtrl.game.state == 'finished'"
+			style="width:300px;text-align:center; font-size:20px;background-color:lightgray;position:absolute;margin:0 auto;top:150px;">
+			No more matches possible!
 		</div>
 	</div>
-
-	<div
-		ng-if="gdCtrl.game.state == 'finished'"
-		style="width:300px;text-align:center; font-size:20px;background-color:lightgray;position:absolute;margin:0 auto;top:150px;">
-		No more matches possible!
+	<div class="switch-button" ng-click="gdCtrl.changeTemplate()">
 	</div>
 </div>
