--- a/app/Game/Views/board.html
+++ b/app/Game/Views/board.html
@@ -1,6 +1,6 @@
 <div class="text-center">
-	<div class="alert alert-success" ng-if="gdCtrl.succesMessage != ''">
-		{{ gdCtrl.succesMessage }}
+	<div class="alert alert-success" ng-if="gdCtrl.successMessage != ''">
+		{{ gdCtrl.successMessage }}
 	</div>
 	<div class="alert alert-danger" ng-if="gdCtrl.errorMessage != ''">
 		{{ gdCtrl.errorMessage }}
